edit: turn off resampling when loading audio files

--- a/scripts/EDA_audio.ipynb
+++ b/scripts/EDA_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "metropolitan-trinidad",
+   "id": "deluxe-pattern",
    "metadata": {},
    "source": [
     "## Load data"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "deluxe-latter",
+   "execution_count": 27,
+   "id": "european-understanding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "import os\n",
     "import csv\n",
     "from tqdm import tqdm\n",
+    "import soundfile as sf\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -28,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "senior-bandwidth",
+   "execution_count": 23,
+   "id": "useful-guest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "tired-desert",
+   "execution_count": 24,
+   "id": "substantial-ground",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "thermal-brook",
+   "execution_count": 25,
+   "id": "unlike-wellington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
     "    for audio_name in tqdm(os.listdir(audio_dir)):\n",
     "        audio_id = audio_name[:-4]\n",
     "        label = labels[audio_id]\n",
-    "        y, sr = lb.load(os.path.join(audio_dir, audio_name))\n",
+    "        y, sr = lb.load(os.path.join(audio_dir, audio_name), sr=None)\n",
     "        dur = lb.get_duration(y, sr)\n",
     "        df.loc[cur_row] = [audio_id, label, dur, sr]\n",
     "        cur_row += 1\n",
@@ -78,15 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "healthy-productivity",
+   "execution_count": 26,
+   "id": "ultimate-manhattan",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9988/9988 [45:13<00:00,  3.68it/s]  \n"
+      "  0%|          | 0/9988 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Error opening '/home/kvu/erc/data/MELD/raw-audios/train/dia452_utt0.mp3': File contains data in an unknown format.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-fdf43fa327f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maggregate_metadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-25-cb04bf7dd1fb>\u001b[0m in \u001b[0;36maggregate_metadata\u001b[0;34m(phase, audio_dir)\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0maudio_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maudio_name\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0maudio_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maudio_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maudio_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mdur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_duration\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcur_row\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0maudio_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/erc/venv/lib/python3.6/site-packages/soundfile.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(file, frames, start, stop, dtype, always_2d, fill_value, out, samplerate, channels, format, subtype, endian, closefd)\u001b[0m\n\u001b[1;32m    255\u001b[0m     \"\"\"\n\u001b[1;32m    256\u001b[0m     with SoundFile(file, 'r', samplerate, channels,\n\u001b[0;32m--> 257\u001b[0;31m                    subtype, endian, format, closefd) as f:\n\u001b[0m\u001b[1;32m    258\u001b[0m         \u001b[0mframes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_prepare_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mframes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    259\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malways_2d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/erc/venv/lib/python3.6/site-packages/soundfile.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, file, mode, samplerate, channels, subtype, endian, format, closefd)\u001b[0m\n\u001b[1;32m    627\u001b[0m         self._info = _create_info_struct(file, mode, samplerate, channels,\n\u001b[1;32m    628\u001b[0m                                          format, subtype, endian)\n\u001b[0;32m--> 629\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode_int\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclosefd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    630\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missuperset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'r+'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mseekable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    631\u001b[0m             \u001b[0;31m# Move write position to 0 (like in Python file objects)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/erc/venv/lib/python3.6/site-packages/soundfile.py\u001b[0m in \u001b[0;36m_open\u001b[0;34m(self, file, mode_int, closefd)\u001b[0m\n\u001b[1;32m   1182\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid file: {0!r}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1183\u001b[0m         _error_check(_snd.sf_error(file_ptr),\n\u001b[0;32m-> 1184\u001b[0;31m                      \"Error opening {0!r}: \".format(self.name))\n\u001b[0m\u001b[1;32m   1185\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmode_int\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_snd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSFM_WRITE\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1186\u001b[0m             \u001b[0;31m# Due to a bug in libsndfile version <= 1.0.25, frames != 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/erc/venv/lib/python3.6/site-packages/soundfile.py\u001b[0m in \u001b[0;36m_error_check\u001b[0;34m(err, prefix)\u001b[0m\n\u001b[1;32m   1355\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0merr\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1356\u001b[0m         \u001b[0merr_str\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_snd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msf_error_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1357\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefix\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0m_ffi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr_str\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'replace'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1358\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1359\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Error opening '/home/kvu/erc/data/MELD/raw-audios/train/dia452_utt0.mp3': File contains data in an unknown format."
      ]
     }
    ],
@@ -97,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "guilty-thumbnail",
+   "id": "growing-border",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alternative-terror",
+   "id": "private-banana",
    "metadata": {},
    "source": [
     "## EDA"
@@ -247,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "accessible-distinction",
+   "id": "black-nebraska",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "completed-catalog",
+   "id": "sporting-mumbai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "popular-stupid",
+   "id": "parental-closer",
    "metadata": {},
    "outputs": [
     {
@@ -6479,7 +6496,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "applicable-distributor",
+   "id": "appointed-florence",
    "metadata": {},
    "outputs": [
     {
@@ -6503,7 +6520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arctic-buffalo",
+   "id": "opposed-colon",
    "metadata": {},
    "source": [
     "## Get CSVs"
@@ -6512,7 +6529,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "exciting-passing",
+   "id": "collective-stuff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6523,7 +6540,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "alleged-conversion",
+   "id": "composite-victorian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6550,7 +6567,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "coastal-france",
+   "id": "located-indiana",
    "metadata": {},
    "outputs": [
     {
@@ -6568,7 +6585,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "violent-screen",
+   "id": "sufficient-transaction",
    "metadata": {},
    "outputs": [
     {
@@ -6586,7 +6603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limited-yukon",
+   "id": "circular-paris",
    "metadata": {},
    "outputs": [],
    "source": []
