--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "varying-chamber",
+   "id": "lightweight-function",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Mar  7 21:25:10 2021       \n",
+      "Mon Mar  8 04:21:19 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   49C    P0    N/A /  N/A |    816MiB /  4042MiB |      2%      Default |\n",
+      "| N/A   47C    P3    N/A /  N/A |   1616MiB /  4042MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -28,11 +28,12 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      1335      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      3288      G   /usr/lib/xorg/Xorg                199MiB |\n",
-      "|    0   N/A  N/A      3659      G   /usr/bin/gnome-shell              190MiB |\n",
-      "|    0   N/A  N/A      6388      G   ...AAAAAAAAA= --shared-files      190MiB |\n",
-      "|    0   N/A  N/A      7448      G   ...AAAAAAAA== --shared-files      146MiB |\n",
+      "|    0   N/A  N/A      1308      G   /usr/lib/xorg/Xorg                 80MiB |\n",
+      "|    0   N/A  N/A      2100      G   /usr/lib/xorg/Xorg                195MiB |\n",
+      "|    0   N/A  N/A      2278      G   /usr/bin/gnome-shell              208MiB |\n",
+      "|    0   N/A  N/A      3884      G   ...AAAAAAAAA= --shared-files      111MiB |\n",
+      "|    0   N/A  N/A      4484      G   ...AAAAAAAA== --shared-files      126MiB |\n",
+      "|    0   N/A  N/A    177604      C   ...e/kvu/erc/venv/bin/python      883MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -43,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "modular-saturn",
+   "execution_count": 2,
+   "id": "compact-pittsburgh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "perceived-greensboro",
+   "execution_count": 3,
+   "id": "controversial-austria",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-friday",
+   "id": "responsible-fourth",
    "metadata": {},
    "outputs": [
     {
@@ -75,9 +76,9 @@
      "output_type": "stream",
      "text": [
       "{ 'dataset': { 'train': { 'args': { 'csv_path': 'data/MELD/raw-audios/train.csv',\n",
-      "                                    'data_dir': 'data/MELD/raw-audios/train/',\n",
-      "                                    'duration': 8,\n",
-      "                                    'format': '.mp3',\n",
+      "                                    'data_dir': 'data/MELD/raw-audios-wav/train/',\n",
+      "                                    'duration': 4,\n",
+      "                                    'format': '.wav',\n",
       "                                    'is_train': True,\n",
       "                                    'n_mels': 128,\n",
       "                                    'sr': 22050},\n",
@@ -87,9 +88,9 @@
       "                                      'name': 'DataLoader'},\n",
       "                          'name': 'AudioDataset'},\n",
       "               'val': { 'args': { 'csv_path': 'data/MELD/raw-audios/val.csv',\n",
-      "                                  'data_dir': 'data/MELD/raw-audios/val/',\n",
-      "                                  'duration': 8,\n",
-      "                                  'format': '.mp3',\n",
+      "                                  'data_dir': 'data/MELD/raw-audios-wav/val/',\n",
+      "                                  'duration': 4,\n",
+      "                                  'format': '.wav',\n",
       "                                  'is_train': False,\n",
       "                                  'n_mels': 128,\n",
       "                                  'sr': 22050},\n",
@@ -106,7 +107,7 @@
       "                       'name': 'tf_efficientnet_b0_ns',\n",
       "                       'num_classes': 7},\n",
       "             'name': 'BaseTimmModel'},\n",
-      "  'optimizer': {'args': {'lr': 0.0001}, 'name': 'Adam'},\n",
+      "  'optimizer': {'args': {'lr': 1e-05}, 'name': 'Adam'},\n",
       "  'pretrained': None,\n",
       "  'scheduler': { 'args': {'gamma': 0.2, 'last_epoch': -1, 'step_size': 3},\n",
       "                 'name': 'StepLR'},\n",
@@ -115,7 +116,7 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      "  2%|▉                                      | 62/2497 [01:54<1:07:36,  1.67s/it]"
+      " 31%|████████████▎                           | 770/2497 [03:31<09:14,  3.11it/s]"
      ]
     }
    ],
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-communications",
+   "id": "creative-shell",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -133,19 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "parallel-shopping",
+   "execution_count": null,
+   "id": "polished-citation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
     "%reload_ext tensorboard"
@@ -153,46 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "leading-partnership",
+   "execution_count": null,
+   "id": "worse-contributor",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 215831), started 2:26:37 ago. (Use '!kill 215831' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-97e89e674bdf700\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-97e89e674bdf700\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%tensorboard --logdir=runs/"
    ]
@@ -200,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secure-unknown",
+   "id": "forty-grill",
    "metadata": {},
    "outputs": [],
    "source": []
