add: convert to .wav in parallel (multi-core processing)

--- a/scripts/mp3ToWav.ipynb
+++ b/scripts/mp3ToWav.ipynb
@@ -2,20 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "minor-infrastructure",
+   "execution_count": 17,
+   "id": "european-compact",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from pydub import AudioSegment\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "from IPython.display import clear_output\n",
+    "from joblib import Parallel, delayed\n",
+    "import multiprocessing\n",
+    "\n",
+    "num_cores = multiprocessing.cpu_count()\n",
+    "num_cores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "western-rwanda",
+   "execution_count": 18,
+   "id": "opening-today",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,33 +49,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "suited-horizon",
+   "execution_count": 19,
+   "id": "included-essay",
    "metadata": {},
    "outputs": [],
    "source": [
     "def convert(phase, data_dir):\n",
     "    target_dir = os.path.join(target_wav_dir, phase)\n",
-    "    for audio in tqdm(os.listdir(data_dir)):\n",
+    "    \n",
+    "    def convertToWav(audio):\n",
+    "        clear_output(wait=True)\n",
     "        audio_path = os.path.join(data_dir, audio)\n",
     "        audio_id = audio[:-4]\n",
     "        \n",
-    "        sound = AudioSegment.from_mp3(audio_path)\n",
+    "        sound = AudioSegment.from_file(audio_path, format='mp3')\n",
+    "        sound = sound.set_frame_rate(22050)\n",
     "        target_path = os.path.join(target_dir, audio_id + '.wav')\n",
-    "        sound.export(target_path, format='wav')"
+    "        sound.export(target_path, format='wav')\n",
+    "        \n",
+    "    Parallel(n_jobs=num_cores)(delayed(convertToWav)(audio) for audio in os.listdir(data_dir))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "aging-adult",
+   "execution_count": 20,
+   "id": "patent-juice",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9988/9988 [22:45<00:00,  7.31it/s] \n"
+      "  1%|▏         | 137/9988 [01:24<1:41:49,  1.61it/s]\n",
+      "  0%|          | 23/9988 [00:51<6:12:02,  2.24s/it]\n",
+      "  7%|▋         | 671/9988 [01:59<27:37,  5.62it/s]\n",
+      "  4%|▍         | 407/9988 [02:37<1:01:49,  2.58it/s]\n"
      ]
     }
    ],
@@ -68,21 +93,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "subsequent-girlfriend",
+   "execution_count": 21,
+   "id": "metallic-samba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1112/1112 [02:27<00:00,  7.51it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "convert('val', val_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "discrete-framing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "convert('test', test_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "humanitarian-penalty",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
