add: Automatic Mixed Precision

--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "lightweight-function",
+   "id": "parliamentary-potato",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Mar  8 04:21:19 2021       \n",
+      "Mon Mar  8 14:13:00 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 450.102.04   Driver Version: 450.102.04   CUDA Version: 11.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -19,7 +19,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  GeForce GTX 1050    Off  | 00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   47C    P3    N/A /  N/A |   1616MiB /  4042MiB |      0%      Default |\n",
+      "| N/A   51C    P8    N/A /  N/A |    923MiB /  4042MiB |      3%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -28,12 +28,11 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      1308      G   /usr/lib/xorg/Xorg                 80MiB |\n",
-      "|    0   N/A  N/A      2100      G   /usr/lib/xorg/Xorg                195MiB |\n",
-      "|    0   N/A  N/A      2278      G   /usr/bin/gnome-shell              208MiB |\n",
-      "|    0   N/A  N/A      3884      G   ...AAAAAAAAA= --shared-files      111MiB |\n",
-      "|    0   N/A  N/A      4484      G   ...AAAAAAAA== --shared-files      126MiB |\n",
-      "|    0   N/A  N/A    177604      C   ...e/kvu/erc/venv/bin/python      883MiB |\n",
+      "|    0   N/A  N/A      1392      G   /usr/lib/xorg/Xorg                 80MiB |\n",
+      "|    0   N/A  N/A      6779      G   /usr/lib/xorg/Xorg                191MiB |\n",
+      "|    0   N/A  N/A      6966      G   /usr/bin/gnome-shell              166MiB |\n",
+      "|    0   N/A  N/A      8131      G   ...AAAAAAAAA= --shared-files      134MiB |\n",
+      "|    0   N/A  N/A     10103      G   ...AAAAAAAA== --shared-files      341MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -45,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "compact-pittsburgh",
+   "id": "intellectual-skating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "controversial-austria",
+   "id": "romance-permission",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "responsible-fourth",
+   "id": "favorite-olive",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
       "  'gpus': '0',\n",
       "  'id': 'audio_effnet_b0',\n",
       "  'loss': {'args': None, 'name': 'FocalLoss'},\n",
-      "  'metric': [{'args': None, 'name': 'Accuracy'}],\n",
+      "  'metric': [{'args': None, 'name': 'F1Weighted'}],\n",
       "  'model': { 'args': { 'freeze_backbone': False,\n",
       "                       'from_pretrained': True,\n",
       "                       'name': 'tf_efficientnet_b0_ns',\n",
@@ -116,7 +115,7 @@
       "Epoch   0\n",
       "-----------------------------------\n",
       "Training........\n",
-      " 31%|████████████▎                           | 770/2497 [03:31<09:14,  3.11it/s]"
+      " 35%|██████████████                          | 876/2497 [03:37<06:20,  4.26it/s]"
      ]
     }
    ],
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-shell",
+   "id": "solar-avenue",
    "metadata": {},
    "source": [
     "## Tensorboard"
@@ -135,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polished-citation",
+   "id": "adolescent-wesley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worse-contributor",
+   "id": "useful-perth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forty-grill",
+   "id": "sealed-skating",
    "metadata": {},
    "outputs": [],
    "source": []
